some changes maded

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,44 +1,48 @@
-.row-header{
-    margin:0px auto;
-    padding:0px auto;
+.row-header {
+  margin: 0px auto;
+  padding: 0px auto;
 }
 
 .row-content {
-    margin:0px auto;
-    padding: 50px 0px 50px 0px;
-    border-bottom: 1px ridge;
-    min-height:400px;
+  margin: 0px auto;
+  padding: 50px 0px 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
 
-.footer{
-    background-color: #cadfe2;
-    margin:0px auto;
-    padding: 20px 0px 20px 0px;
+.footer {
+  background-color: #cadfe2;
+  margin: 0px auto;
+  padding: 20px 0px 20px 0px;
 }
 .jumbotron {
-    padding:30px 70px 30px 70px;
-    margin:0px auto;
-    background: #cadfe2 ;
-    color:black;
+  padding: 30px 70px 30px 70px;
+  margin: 0px auto;
+  background: #cadfe2;
+  color: black;
 }
 
-address{
-    font-size:80%;
-    margin:0px;
-    color:#0f0f0f;
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
 
 .navbar-dark {
-    background-color: black;
+  background-color: black;
 }
 
-
 .carousel {
-   margin:2px auto; }
-    .carousel .carousel-item {
-     }
-      .carousel .carousel-item img {
-          height: 100% !important;
-      object-fit: contain;
-      display: none;
-    }
+  margin: 2px auto;
+}
+.carousel .carousel-item {
+}
+.carousel .carousel-item img {
+  height: 100% !important;
+  object-fit: contain;
+  display: none;
+}
+
+* {
+  font-family: cursive;
+}
