--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,44 +1,98 @@
-.row-header{
-    margin:0px auto;
-    padding:0px auto;
+* {
+  font-family: cursive;
+}
+
+.row-header {
+  margin: 0px auto;
+  padding: 0px auto;
 }
 
 .row-content {
-    margin:0px auto;
-    padding: 50px 0px 50px 0px;
-    border-bottom: 1px ridge;
-    min-height:400px;
+  margin: 0px auto;
+  padding: 50px 0px 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
 
-.footer{
-    background-color: #cadfe2;
-    margin:0px auto;
-    padding: 20px 0px 20px 0px;
+.footer {
+  background-image: url("./images/footerbg.gif");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  position: relative;
+  color: white;
+  margin: 0px auto;
+  padding: 20px 0px 20px 0px;
 }
 .jumbotron {
-    padding:30px 70px 30px 70px;
-    margin:0px auto;
-    background: #cadfe2 ;
-    color:black;
+  padding: 15px 70px 15px 70px;
+  margin: 0px auto;
+  background: whitesmoke;
+  color: black;
+}
+.bg{
+  background-image: url("./images/bg.gif");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  position: relative;
+}
+.aboutus{
+  color: white;
+  background-image: url("./images/aboutusbg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  position: relative;
 }
 
-address{
-    font-size:80%;
-    margin:0px;
-    color:#0f0f0f;
+.registrationform{
+  color: white;
+  background-image: url("./images/uoj.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  position: relative;
+}
+.contactform{
+  color: white;
+  background-image: url("./images/jaffna-university.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  position: relative;
+}
+.guide{
+  color: white;
+  background-image: url("./images/guide.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  position: relative;
+}
+.location{
+  color: white;
+}
+
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
 
 .navbar-dark {
-    background-color: black;
+  background-color: black;
+}
+.text-black{
+  color: black;
 }
 
-
 .carousel {
-   margin:2px auto; }
-    .carousel .carousel-item {
-     }
-      .carousel .carousel-item img {
-          height: 100% !important;
-      object-fit: contain;
-      display: none;
-    }
+  margin: 2px auto;
+}
+.carousel .carousel-item {
+ 
+}
+.carousel .carousel-item img {
+  
+}
